# banana

./: pyproject.toml
.github/copier/: .copier-answers.python.yaml
docs/: comparison.md
