#:schema https://json.schemastore.org/pyproject.json
# https://packaging.python.org/en/latest/specifications/pyproject-toml/

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = []
description = "Add your description here"
keywords = []
license = "MIT"
name = "liblaf-banana"
readme = "docs/README.md"
requires-python = "~=3.12"
version = "0.0.0"

[project.urls]
"Changelog" = "https://github.com/liblaf/banana/blob/main/CHANGELOG.md"
"Homepage" = "https://github.com/liblaf/banana"
"Issue Tracker" = "https://github.com/liblaf/banana/issues"
"Release Notes" = "https://github.com/liblaf/banana/releases"
"Source Code" = "https://github.com/liblaf/banana"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.hatch.build.targets.wheel]
packages = ["src/banana"]
